Agregados selectores de estilo para los estados de las tareas (filtrado, warning)

--- a/SWB4/swb/SWBAdmin/src/swbadmin/css/swb.css
+++ b/SWB4/swb/SWBAdmin/src/swbadmin/css/swb.css
@@ -119,26 +119,77 @@ html, body, #main {
 .swbIconProcessW,
 .swbIconProcessF,
 .swbIconSubProcess,
+.swbIconSubProcessU,
+.swbIconSubProcessW,
+.swbIconSubProcessF,
 .swbIconAdhocSubProcess,
+.swbIconAdhocSubProcessU,
+.swbIconAdhocSubProcessW,
+.swbIconAdhocSubProcessF,
 .swbIconEventSubProcess,
+.swbIconEventSubProcessU,
+.swbIconEventSubProcessW,
+.swbIconEventSubProcessF,
 .swbIconTransactionSubProcess,
+.swbIconTransactionSubProcessU,
+.swbIconTransactionSubProcessW,
+.swbIconTransactionSubProcessF,
 .swbIconTask,
+.swbIconTaskU,
+.swbIconTaskW,
+.swbIconTaskF,
 .swbIconUserTask,
 .swbIconUserTaskU,
 .swbIconUserTaskW,
 .swbIconUserTaskF,
 .swbIconServiceTask,
+.swbIconServiceTaskU,
+.swbIconServiceTaskW,
+.swbIconServiceTaskF,
 .swbIconScriptTask,
+.swbIconScriptTaskU,
+.swbIconScriptTaskW,
+.swbIconScriptTaskF,
 .swbIconBusinessRuleTask,
+.swbIconBusinessRuleTaskU,
+.swbIconBusinessRuleTaskW,
+.swbIconBusinessRuleTaskF,
 .swbIconManualTask,
+.swbIconManualTaskU,
+.swbIconManualTaskW,
+.swbIconManualTaskF,
 .swbIconSendTask,
+.swbIconSendTaskU,
+.swbIconSendTaskW,
+.swbIconSendTaskF,
 .swbIconReceiveTask,
+.swbIconReceiveTaskU,
+.swbIconReceiveTaskW,
+.swbIconReceiveTaskF,
 .swbIconCallTask,
+.swbIconCallTaskU,
+.swbIconCallTaskW,
+.swbIconCallTaskF,
 .swbIconCallManualTask,
+.swbIconCallManualTaskU,
+.swbIconCallManualTaskW,
+.swbIconCallManualTaskF,
 .swbIconCallBusinessRuleTask,
+.swbIconCallBusinessRuleTaskU,
+.swbIconCallBusinessRuleTaskW,
+.swbIconCallBusinessRuleTaskF,
 .swbIconCallScriptTask,
+.swbIconCallScriptTaskU,
+.swbIconCallScriptTaskW,
+.swbIconCallScriptTaskF,
 .swbIconCallUserTask,
+.swbIconCallUserTaskU,
+.swbIconCallUserTaskW,
+.swbIconCallUserTaskF,
 .swbIconCallProcess,
+.swbIconCallProcessU,
+.swbIconCallProcessW,
+.swbIconCallProcessF,
 .swbIconStartEvent,
 .swbIconMessageStartEvent,
 .swbIconTimerStartEvent,
