Agregados selectores de estilo para los estados de las tareas (filtrado, warning)

--- a/SWB4/swb/SWBAdmin/src/swbadmin/css/swb.css
+++ b/SWB4/swb/SWBAdmin/src/swbadmin/css/swb.css
@@ -328,26 +328,77 @@ html, body, #main {
 .swbIconProcessF    { background-position: -459px -56px; }
 .swbIconProcesses   { background-position: -460px -0px; }
 .swbIconSubProcess   { background-position: -0px -377px; }
+.swbIconSubProcessU   { background-position: -0px -377px; }
+.swbIconSubProcessW   { background-position: -0px -377px; }
+.swbIconSubProcessF   { background-position: -0px -377px; }
 .swbIconAdhocSubProcess   { background-position: -180px -377px; }
+.swbIconAdhocSubProcessY   { background-position: -180px -377px; }
+.swbIconAdhocSubProcessW   { background-position: -180px -377px; }
+.swbIconAdhocSubProcessF   { background-position: -180px -377px; }
 .swbIconEventSubProcess   { background-position: -40px -377px; }
+.swbIconEventSubProcessU   { background-position: -40px -377px; }
+.swbIconEventSubProcessW   { background-position: -40px -377px; }
+.swbIconEventSubProcessF   { background-position: -40px -377px; }
 .swbIconTransactionSubProcess   { background-position: -60px -377px; }
+.swbIconTransactionSubProcessU   { background-position: -60px -377px; }
+.swbIconTransactionSubProcessW   { background-position: -60px -377px; }
+.swbIconTransactionSubProcessF   { background-position: -60px -377px; }
 .swbIconTask   { background-position: -0px -305px; }
+.swbIconTaskU   { background-position: -0px -305px; }
+.swbIconTaskW   { background-position: -0px -305px; }
+.swbIconTaskF   { background-position: -0px -305px; }
 .swbIconUserTask   { background-position: -40px -305px; }
 .swbIconUserTaskU   { background-position: -40px -305px; }
 .swbIconUserTaskW   { background-position: -40px -305px; }
 .swbIconUserTaskF   { background-position: -40px -305px; }
 .swbIconServiceTask   { background-position: -120px -305px; }
+.swbIconServiceTaskU   { background-position: -120px -305px; }
+.swbIconServiceTaskW   { background-position: -120px -305px; }
+.swbIconServiceTaskF   { background-position: -120px -305px; }
 .swbIconScriptTask   { background-position: -80px -305px; }
+.swbIconScriptTaskU   { background-position: -80px -305px; }
+.swbIconScriptTaskW   { background-position: -80px -305px; }
+.swbIconScriptTaskF   { background-position: -80px -305px; }
 .swbIconBusinessRuleTask   { background-position: -240px -305px; }
+.swbIconBusinessRuleTaskU   { background-position: -240px -305px; }
+.swbIconBusinessRuleTaskW   { background-position: -240px -305px; }
+.swbIconBusinessRuleTaskF   { background-position: -240px -305px; }
 .swbIconManualTask   { background-position: -160px -305px; }
+.swbIconManualTaskU   { background-position: -160px -305px; }
+.swbIconManualTaskW   { background-position: -160px -305px; }
+.swbIconManualTaskF   { background-position: -160px -305px; }
 .swbIconSendTask   { background-position: -200px -305px; }
+.swbIconSendTaskU   { background-position: -200px -305px; }
+.swbIconSendTaskW   { background-position: -200px -305px; }
+.swbIconSendTaskF   { background-position: -200px -305px; }
 .swbIconReceiveTask   { background-position: -220px -305px; }
+.swbIconReceiveTaskU   { background-position: -220px -305px; }
+.swbIconReceiveTaskW   { background-position: -220px -305px; }
+.swbIconReceiveTaskF   { background-position: -220px -305px; }
 .swbIconCallTask   { background-position: -20px -305px; }
+.swbIconCallTaskU   { background-position: -20px -305px; }
+.swbIconCallTaskW   { background-position: -20px -305px; }
+.swbIconCallTaskF   { background-position: -20px -305px; }
 .swbIconCallManualTask   { background-position: -180px -305px; }
+.swbIconCallManualTaskU   { background-position: -180px -305px; }
+.swbIconCallManualTaskW   { background-position: -180px -305px; }
+.swbIconCallManualTaskF   { background-position: -180px -305px; }
 .swbIconCallBusinessRuleTask   { background-position: -260px -305px; }
+.swbIconCallBusinessRuleTaskU   { background-position: -260px -305px; }
+.swbIconCallBusinessRuleTaskW   { background-position: -260px -305px; }
+.swbIconCallBusinessRuleTaskF   { background-position: -260px -305px; }
 .swbIconCallScriptTask   { background-position: -100px -305px; }
+.swbIconCallScriptTaskU   { background-position: -100px -305px; }
+.swbIconCallScriptTaskW   { background-position: -100px -305px; }
+.swbIconCallScriptTaskF   { background-position: -100px -305px; }
 .swbIconCallUserTask   { background-position: -60px -305px; }
+.swbIconCallUserTaskU   { background-position: -60px -305px; }
+.swbIconCallUserTaskW   { background-position: -60px -305px; }
+.swbIconCallUserTaskF   { background-position: -60px -305px; }
 .swbIconCallProcess   { background-position: -240px -377px; }
+.swbIconCallProcessU   { background-position: -240px -377px; }
+.swbIconCallProcessW   { background-position: -240px -377px; }
+.swbIconCallProcessF   { background-position: -240px -377px; }
 .swbIconInclusiveGateway   { background-position: -400px -145px; }
 .swbIconParallelGateway    { background-position: -420px -145px; }
 .swbIconStartEvent   { background-position: -0px -234px; }
