--- a/SWB4/swb/web/work/models/SWBAdmin/Template/1/1/template.html
+++ b/SWB4/swb/web/work/models/SWBAdmin/Template/1/1/template.html
@@ -56,7 +56,7 @@
         <script type="text/javascript" charset="utf-8" src="{webpath}/swbadmin/js/swb.js"></script>
         <script type="text/javascript" charset="utf-8" src="{webpath}/swbadmin/js/swb_admin.js"></script>
         <script type="text/javascript" charset="utf-8" src="{webpath}/swbadmin/js/schedule.js"></script>
-        <script type="text/javascript" charset="utf-8" src="/swbadmin/js/fileUpload.js" ></script>
+        <script type="text/javascript" charset="utf-8" src="{webpath}/swbadmin/js/fileUpload.js" ></script>
         <script type="text/javascript">
             context="<webpath/>";
             word_separator='_';
@@ -206,6 +206,6 @@
             </div>
         </div>
         <div id="status" dojoType="dojox.layout.ContentPane" executeScripts="true">status...</div>
-        <applet code="LoadApplet" codebase="/swbadmin/lib" width="0" height="0"></applet>
+        <applet code="LoadApplet" codebase="{webpath}/swbadmin/lib" width="0" height="0"></applet>
     </body>
 </html>
