--- a/SWB4/swb/applets/ftp/src/applets/ftp/ftpPanel.form
+++ b/SWB4/swb/applets/ftp/src/applets/ftp/ftpPanel.form
@@ -51,8 +51,8 @@
         </Component>
         <MenuItem class="javax.swing.JMenuItem" name="jMenuItemDownloadDir">
           <Properties>
-            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="applets/ftp/ftp.properties" key="downloaddir" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="bundle.getString(&quot;downloaddir&quot;)" type="code"/>
             </Property>
           </Properties>
           <Events>
